--- a/guide/data-converter/index.html
+++ b/guide/data-converter/index.html
@@ -54,7 +54,8 @@
 
                     <p><label>Specify class name</label></p>
                     <div class="settingsGroup">
-                        <input type="text" value=",,,,,,link," class="class-name">
+                        <input type="text" value=",,,,center,link," class="class-name">
+                        <!-- ,,,,center,link, -->
                     </div>
                 </form>
             </div>
