--- a/guide/html/convention_ia.html
+++ b/guide/html/convention_ia.html
@@ -59,6 +59,10 @@
             text-align: left;
         }
         
+        table tbody td.center {
+            text-align: center;
+        }
+        
         table tbody td .b-small {
             display: block;
             margin-top: 3px;
@@ -266,15 +270,16 @@
                         <!-- <h2>Information Architecture</h2> -->
                         <div class="as-tab">
                             <ul class="ia-tab area-tab-mnu flexible">
-                                <li><a href="#">예시</a></li>
                                 <li><a href="#" class="shot">메인&공통</a></li>
                                 <li><a href="#">멤버쉽</a></li>
-                                <li><a href="#">대출 상품안내/신청/조회.관리</a></li>
+                                <li><a href="#">대출신청</a></li>
+                                <li><a href="#">조회/관리</a></li>
                                 <li><a href="#">고객센터</a></li>
-                                <li><a href="#">이벤트</a></li>
+                                <li><a href="#">인증보안</a></li>
                                 <li><a href="#">은행소개</a></li>
-                                <li><a href="#">렌딩-mo</a></li>
-                                <li><a href="#">렌딩-pc</a></li>
+                                <li><a href="#">모바일웹</a></li>
+                                <li><a href="#">PC웹</a></li>
+                                <li><a href="#">예시</a></li>
                             </ul>
                             <div class="tab-inner area-tab-cont">
                                 <!-- <span style="float: left; margin-top: 15px"> 
@@ -303,6 +308,13 @@
 
                                 <!--  -->
                                 <div class="frt_tbl08 frt_tbl tab-ele"></div>
+
+                                <!--  -->
+                                <div class="frt_tbl09 frt_tbl tab-ele"></div>
+
+                                <!--  -->
+                                <div class="frt_tbl10 frt_tbl tab-ele"></div>
+
 
                                 <!-- mobile quick view -->
                                 <div class="mobile-frame">
