--- a/guide/html/convention_tab02.html
+++ b/guide/html/convention_tab02.html
@@ -1,13 +1,12 @@
 <table cellspacing="0" border="1">
     <colgroup>
-        <col width="3%">
-        <col width="10%">
-        <col width="12%">
-        <col width="12%">
-        <col width="12%">
-        <col width="13%">
-        <col width="*">
+        <col width="50">
         <col width="15%">
+        <col width="15%">
+        <col width="20%">
+        <col width="85">
+        <col width="*">
+        <col width="10%">
     </colgroup>
     <thead>
         <tr>
@@ -15,8 +14,7 @@
             <th scope="col">1Depth</th>
             <th scope="col">2Depth</th>
             <th scope="col">3Depth</th>
-            <th scope="col">4Depth</th>
-            <th scope="col">Pop</th>
+            <th scope="col">타입</th>
             <th scope="col">page</th>
             <th scope="col">비고</th>
         </tr>
@@ -24,32 +22,92 @@
     <tbody class="cklist">
         <tr>
             <td></td>
+            <td>본인확인(약관동의)</td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td class="link">/html/ini.html</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>테스트2</td>
+            <td class="center">본문</td>
+            <td class="">MAMEM01000001P</td>
             <td></td>
         </tr>
         <tr>
             <td></td>
+            <td>기본정보입력</td>
             <td></td>
             <td></td>
+            <td class="center">본문</td>
+            <td class="">MAMEM02000001P</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>가입완료</td>
             <td></td>
             <td></td>
+            <td class="center">본문</td>
+            <td class="">MAMEM03000001P</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>간편비밀번호</td>
             <td></td>
             <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI01000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>패턴</td>
+            <td></td>
+            <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI02000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>지문</td>
+            <td></td>
+            <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI03000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>FACE ID</td>
+            <td></td>
+            <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI04000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>금융인증서</td>
+            <td></td>
+            <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI05000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>공동인증서</td>
+            <td></td>
+            <td></td>
+            <td class="center">공통</td>
+            <td class="">MALGI06000001M</td>
+            <td></td>
+        </tr>
+        <tr class="native">
+            <td></td>
+            <td>로그인방식선택</td>
+            <td></td>
+            <td></td>
+            <td class="center">팝업</td>
+            <td class="">MALGI07000001M</td>
             <td></td>
         </tr>
     </tbody>
