--- a/guide/html/convention_tab05.html
+++ b/guide/html/convention_tab05.html
@@ -22,92 +22,110 @@
     <tbody class="cklist">
         <tr>
             <td></td>
-            <td>링크테스트</td>
+            <td>FAQ</td>
             <td></td>
             <td></td>
             <td class="center">본문</td>
-            <td class="link">../../html/ini.html</td>
+            <td class="">MACCT01000001M</td>
             <td></td>
         </tr>
         <tr>
             <td></td>
-            <td>링크테스트</td>
+            <td>공지사항</td>
+            <td>공지사항목록</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT02010001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>공지사항</td>
+            <td>공지사항상세</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT02020001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>이벤트</td>
+            <td>이벤트목록</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT03010001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>이벤트</td>
+            <td>이벤트상세</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT03020001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>증명서발급</td>
+            <td>증명서목록</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT04010001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>증명서발급</td>
+            <td>거래내역서발급신청</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT04020001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>증명서발급</td>
+            <td>부채증명서발급신청</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT04030001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>증명서발급</td>
+            <td>금융거래확인서발급신청</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT04040001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>증명서발급</td>
+            <td>발급내역</td>
+            <td></td>
+            <td class="center">본문</td>
+            <td class="">MACCT04050001M</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>서식/약관자료</td>
             <td></td>
             <td></td>
             <td class="center">본문</td>
-            <td class="link">../../html/ini3.html</td>
+            <td class="">MACCT05000001M</td>
             <td></td>
         </tr>
         <tr>
             <td></td>
-            <td>인트로</td>
+            <td>이용시간안내</td>
             <td></td>
             <td></td>
             <td class="center">본문</td>
-            <td class="">../../html/MACOM01000001M</td>
-            <td></td>
-        </tr>
-        <tr class="native">
-            <td></td>
-            <td>인트로</td>
-            <td>권한확인</td>
-            <td></td>
-            <td class="center">본문</td>
-            <td>MACOM01010001M</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>전체메뉴</td>
-            <td></td>
-            <td></td>
-            <td class="center">본문</td>
-            <td class="">MACOM02000001M</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>주소검색</td>
-            <td></td>
-            <td></td>
-            <td class="center">공통(팝업)</td>
-            <td class="">MACOM03000001P</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>주소검색</td>
-            <td>검색결과</td>
-            <td></td>
-            <td class="center">공통(팝업)</td>
-            <td class="">MACOM03010001P</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>주소검색</td>
-            <td>상세주소입력</td>
-            <td></td>
-            <td class="center">공통(팝업)</td>
-            <td class="">MACOM03020001P</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>약관PDF뷰어</td>
-            <td></td>
-            <td></td>
-            <td class="center">공통(팝업)</td>
-            <td class="">MACOM04000001P</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>메인</td>
-            <td></td>
-            <td></td>
-            <td class="center">메인</td>
-            <td class="">MAMAI01000001M</td>
+            <td class="">MACCT06000001M</td>
             <td></td>
         </tr>
     </tbody>
