--- a/guide/html/convention_tab10.html
+++ b/guide/html/convention_tab10.html
@@ -24,12 +24,56 @@
     <tbody class="cklist">
         <tr>
             <td></td>
+            <td colspan="5">링크의 상위 td에 link클래스 작업완료. 배경을 흰색으로 변경</td>
+            <td class="link">../../html/ini.html</td>
             <td></td>
+        </tr>
+        <tr class="case-pass">
             <td></td>
+            <td colspan="5">케이스별 노출을 위한 페이지는 tr에 case-pass클래스를 적용하여 작업 카운트에서 제외</td>
+            <td class="link">../../html/ini-detail-view.html</td>
             <td></td>
+        </tr>
+        <tr>
             <td></td>
+            <td colspan="5">링크의 상위 td에 link클래스 유무로 앵커태그를 생성</td>
+            <td class="link">../../html/ini.html</td>
             <td></td>
-            <td>테스트10번탭</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td colspan="5">링크의 상위 td에 ing클래스 작업진행중.<br>진행중은 비고영역의 1순위로 수정태그 및 비고텍스트를 감춤</td>
+            <td class="link ing">../../html/ini.html</td>
+            <td>텍스트가 있눈데</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td colspan="5">링크의 상위 td에 ing클래스 작업완료 후 검수대기상태. 배경은 미완료로 맑은회색. 검수완료 후 ing 클래스 삭제<br>진행된 결과물을 보기 위해 link클래스도 적용</td>
+            <td class="link">../../html/ini.html</td>
+            <td></td>
+        </tr>
+        <tr class="common">
+            <td></td>
+            <td colspan="5">공통인 리스트를 추가하는 경우 tr에 common클래스 추가<br>링크유무와 상관없이 작업진행률에서 전체페이지에서 카운팅 하지 않음</td>
+            <td>../../html/ini.html</td>
+            <td></td>
+        </tr>
+        <tr class="delete">
+            <td></td>
+            <td colspan="5">완료된 페이지가 요건에 따라 삭제되어도 리스트에서 지우지말고 tr에 delete클래스 추가<br>링크유무와 상관없이 작업진행률에서 전체페이지에서 카운팅 하지 않음</td>
+            <td class="link">../../html/ini.html</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td colspan="5">수정시 mod 클래스를 적용하여 월.일 기입</td>
+            <td class="">../../html/ini.html</td>
+            <td>비고 텍스트 기입<br><span class="mod">03.01</span><span class="mod">03.03</span></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td colspan="5">No 부분의 숫자만 페이지로 카운트</td>
+            <td class="link "></td>
             <td></td>
         </tr>
         <tr>
@@ -39,7 +83,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>테스트3</td>
+            <td class="link"></td>
             <td></td>
         </tr>
         <tr>
@@ -49,7 +93,17 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>테스트3</td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
             <td></td>
         </tr>
     </tbody>
