--- a/guide/html/module_etc.html
+++ b/guide/html/module_etc.html
@@ -579,13 +579,14 @@
                 <strong class="pop-tit">타이틀영역</strong>
             </div>
             <div class="lyr-popup-contents">
-                <div class="lyr-pop-sec">
+                <div class="lyr-pop-sec" role="group">
                     <a href="#" class="bb" onclick="SHS.modalLayer.open($(this), 'tempPop2', '500');">기본팝업</a> 11111
                     <br>22222<br>33333<br>11111<br>22222<br>33333<br> 11111
                     <br>22222<br>33333<br>11111<br>22222<br>33333<br>
                 </div>
-                <div class="lyr-pop-sec">
-                    11111<br>22222<br>33333<br>11111<br>22222<br>33333<br> 11111
+                <div class="lyr-pop-sec" role="button">
+                    <a href="#" class="bb" onclick="SHS.modalLayer.open($(this), 'tempPop2', '500');">기본팝업</a> 11111
+                    <br>22222<br>33333<br>11111<br>22222<br>33333<br> 11111
                     <br>22222<br>33333<br>11111<br>22222<br>33333<br>
                 </div>
                 <div class="lyr-pop-sec">
